--- a/2024.html
+++ b/2024.html
@@ -115,6 +115,21 @@
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
+                 <figure class="img_container__part">
+                                <img src="./imgs/luckadrezura-2024.JPG"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                 <figure class="img_container__part">
+                                <img src="./imgs/majdadrezura-2024.JPG"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                 <figure class="img_container__part">
+                                <img src="./imgs/vercadrezura-2024.JPG"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
 
                 
                 <article id="detskyden2024" class="section_year__article article_news">
