--- a/2024.html
+++ b/2024.html
@@ -46,7 +46,7 @@
         <section id="2024" class="section_year">
             <section class="section_year">
                 <h3 class="section_year__heading">2024</h3>
-
+        <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Zkoušky základního výcviku jezdce v Sobotce 1.9.2024</h4>
                   <p class="article_news__text">Po několika letech se několik členek naší stáje opět objevilo na soupise účastníků ZZVJ /zkoušky základního výcviku jezdce/. 
                       Termínem zkoušky byl poslední den prázdnin neděle 1.9. a místem konání naše oblíbená Sobotka. Sešlo se celkem 18 účastníků.
@@ -93,10 +93,11 @@
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
+                </article>
 
                       
 
-
+            <article class="section_year__article article_news">
                  <h4 class="article_news__heading">Drezurní závody v Sobotce 31.8. 2024</h4>
                     <p class="article_news__text">V sobotu 31.8.2024 jsme zavítali do Sobotky na drezurní závody, které pro nás byly i přípravou na ZZVJ. Na Devronovi startovala Majda s Verčou, 
                         o Saula se podělily Klárka s Johankou P.. Lucka jela na Tedovi. 
@@ -130,6 +131,7 @@
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
+                </article>
 
                 
                 <article id="detskyden2024" class="section_year__article article_news">
