--- a/2024.html
+++ b/2024.html
@@ -60,32 +60,32 @@
                    <p class="article_news__text">Tino, speciální díky Tobě a profesoru Devronovi. Moc nám pomohl. :-)</p>
             <div class="img_container article_news__imgs">
                  <figure class="img_container__part">
-                                <img src="./imgs/zzvj1.JPG"
+                                <img src="./akce_foto/zzvj1.JPG"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
                 <figure class="img_container__part">
-                                <img src="./imgs/zzvj2.JPG"
+                                <img src="./akce_foto/zzvj2.JPG"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
                 <figure class="img_container__part">
-                                <img src="./imgs/zzvj3.JPG"
+                                <img src="./akce_foto/zzvj3.JPG"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
                 <figure class="img_container__part">
-                                <img src="./imgs/zzvj4.JPG"
+                                <img src="./akce_foto/zzvj4.JPG"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
                 <figure class="img_container__part">
-                                <img src="./imgs/zzvj5.JPG"
+                                <img src="./akce_foto/zzvj5.JPG"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
                 <figure class="img_container__part">
-                                <img src="./imgs/zzvj6.JPG"
+                                <img src="./akce_foto/zzvj6.JPG"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
@@ -110,27 +110,27 @@
                         Vyposlechly si i zhodnocení hlavního rozhodčího pana Tvarůžka. Za rady a připomínky doma v tréninku a na závodech děkujeme i trenérce Olině.</p>
                 <div class="img_container article_news__imgs">
                  <figure class="img_container__part">
-                                <img src="./imgs/jahacadrezura-2024.JPG"
+                                <img src="./akce_foto/jahacadrezura-2024.JPG"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
                  <figure class="img_container__part">
-                                <img src="./imgs/klarkadrezura-2024.JPG"
+                                <img src="./akce_foto/klarkadrezura-2024.JPG"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
                  <figure class="img_container__part">
-                                <img src="./imgs/luckadrezura-2024.JPG"
+                                <img src="./akce_foto/luckadrezura-2024.JPG"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
                  <figure class="img_container__part">
-                                <img src="./imgs/majdadrezura-2024.JPG"
+                                <img src="./akce_foto/majdadrezura-2024.JPG"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
                  <figure class="img_container__part">
-                                <img src="./imgs/vercadrezura-2024.JPG"
+                                <img src="./akce_foto/vercadrezura-2024.JPG"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
