--- a/2024.html
+++ b/2024.html
@@ -46,6 +46,21 @@
         <section id="2024" class="section_year">
             <section class="section_year">
                 <h3 class="section_year__heading">2024</h3>
+
+                 <article class="section_year__article article_news">
+                <h4 class="article_news__heading">Dětský den - rozloučení s létem - sobota 5.10.2024</h4>
+                  <p class="article_news__text">Těšíme se na vás.</p>
+                  
+            <div class="img_container article_news__imgs">
+                 <figure class="img_container__part">
+                                <img src="./akce_foto/image.JPEG"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+               
+                </div>
+                </article>
+
         <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Zkoušky základního výcviku jezdce v Sobotce 1.9.2024</h4>
                   <p class="article_news__text">Po několika letech se několik členek naší stáje opět objevilo na soupise účastníků ZZVJ /zkoušky základního výcviku jezdce/. 
