--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
                         alt="Fotografie dvou koní na louce, v pozadí je ještěd">
                 </figure>
             </section>
+
+             <section class="section main__section">
+                <h3 class="section__heading section__heading_main section__heading--absolute">Akce pro veřejnost</h3>
+                <p class="section__text section__text--border">Dětský den. Na jaře se nám akce povedla, tak ji opakujeme i na podzim. </p>
+                <figure class="section__img img_wrapper">
+                    <img class="img_wrapper__item" src="./akce_foto/image.jpeg"
+                        alt="plakat na akci detsky den">
+                </figure>
+            </section>
             <section class="section main__section">
                 <h3 class="section__heading section__heading_main section__heading--absolute">Poloha</h3>
                 <p class="section__text section__text--border">Naše stáj se nachází jen sedm minut od centra Liberce, v ulici Pod Strání 131 Stráž nad Nisou, na okraji průmyslové zóny Sever a nedaleko obchodního centra Globus. Stáj je dostupná i MHD (autobusová linka č. 14, č. 27, č. 600 zastávka Globus nebo Obchodní).</p>
