--- a/2024.html
+++ b/2024.html
@@ -100,12 +100,12 @@
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
                 <figure class="img_container__part">
-                                <img src="./akce_foto/zzvj6.JPG"
+                                <img src="./akce_foto/zzvj6.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
                 <figure class="img_container__part">
-                                <img src="./akce_foto/zzvj7.JPG"
+                                <img src="./akce_foto/zzvj7.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
