--- a/2024.html
+++ b/2024.html
@@ -53,7 +53,7 @@
                   
             <div class="img_container article_news__imgs">
                  <figure class="img_container__part">
-                                <img src="./akce_foto/image.JPEG"
+                                <img src="./akce_foto/image.jpeg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
@@ -75,27 +75,27 @@
                    <p class="article_news__text">Tino, speciální díky Tobě a profesoru Devronovi. Moc nám pomohl. :-)</p>
             <div class="img_container article_news__imgs">
                  <figure class="img_container__part">
-                                <img src="./akce_foto/zzvj1.JPG"
+                                <img src="./akce_foto/zzvj1.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
                 <figure class="img_container__part">
-                                <img src="./akce_foto/zzvj2.JPG"
+                                <img src="./akce_foto/zzvj2.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
                 <figure class="img_container__part">
-                                <img src="./akce_foto/zzvj3.JPG"
+                                <img src="./akce_foto/zzvj3.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
                 <figure class="img_container__part">
-                                <img src="./akce_foto/zzvj4.JPG"
+                                <img src="./akce_foto/zzvj4.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
                 <figure class="img_container__part">
-                                <img src="./akce_foto/zzvj5.JPG"
+                                <img src="./akce_foto/zzvj5.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
@@ -125,27 +125,27 @@
                         Vyposlechly si i zhodnocení hlavního rozhodčího pana Tvarůžka. Za rady a připomínky doma v tréninku a na závodech děkujeme i trenérce Olině.</p>
                 <div class="img_container article_news__imgs">
                  <figure class="img_container__part">
-                                <img src="./akce_foto/jahacadrezura-2024.JPG"
+                                <img src="./akce_foto/jahacadrezura-2024.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
                  <figure class="img_container__part">
-                                <img src="./akce_foto/klarkadrezura-2024.JPG"
+                                <img src="./akce_foto/klarkadrezura-2024.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
                  <figure class="img_container__part">
-                                <img src="./akce_foto/luckadrezura-2024.JPG"
+                                <img src="./akce_foto/luckadrezura-2024.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
                  <figure class="img_container__part">
-                                <img src="./akce_foto/majdadrezura-2024.JPG"
+                                <img src="./akce_foto/majdadrezura-2024.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
                  <figure class="img_container__part">
-                                <img src="./akce_foto/vercadrezura-2024.JPG"
+                                <img src="./akce_foto/vercadrezura-2024.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
