--- a/2024.html
+++ b/2024.html
@@ -53,7 +53,7 @@
                   
             <div class="img_container article_news__imgs">
                  <figure class="img_container__part">
-                                <img src="./akce_foto/image.jpeg"
+                                <img src="./akce_foto/Image.jpeg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
@@ -125,7 +125,7 @@
                         Vyposlechly si i zhodnocení hlavního rozhodčího pana Tvarůžka. Za rady a připomínky doma v tréninku a na závodech děkujeme i trenérce Olině.</p>
                 <div class="img_container article_news__imgs">
                  <figure class="img_container__part">
-                                <img src="./akce_foto/jahacadrezura-2024.jpg"
+                                <img src="./akce_foto/johacadrezura-2024.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
