--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <h3 class="section__heading section__heading_main section__heading--absolute">Akce pro veřejnost</h3>
                 <p class="section__text section__text--border">Dětský den. Na jaře se nám akce povedla, tak ji opakujeme i na podzim. </p>
                 <figure class="section__img img_wrapper">
-                    <img class="img_wrapper__item" src="./akce_foto/image.jpeg"
+                    <img class="img_wrapper__item" src="./akce_foto/Image.jpeg"
                         alt="plakat na akci detsky den">
                 </figure>
             </section>
