--- a/2024.html
+++ b/2024.html
@@ -65,7 +65,7 @@
                 <h4 class="article_news__heading">Zkoušky základního výcviku jezdce v Sobotce 1.9.2024</h4>
                   <p class="article_news__text">Po několika letech se několik členek naší stáje opět objevilo na soupise účastníků ZZVJ /zkoušky základního výcviku jezdce/. 
                       Termínem zkoušky byl poslední den prázdnin neděle 1.9. a místem konání naše oblíbená Sobotka. Sešlo se celkem 18 účastníků.
-                       Ke zkouškám nakonec nastoupily Verča a Majda s Devronem a Lucka s Tedem. .</p>
+                       Ke zkouškám nakonec nastoupily Verča a Majda s Devronem a Lucka s Tedem.</p>
                   <p class="article_news__text">ZZVJ je tvořena několika etapami. První je předvádění koně, kdy zkoušející komisař klade důraz zejména na předvedení v dynamickém klusu.  
                        Druhou etapou je vědomostní test spojený s popisem koně. Třetí etapou je drezura, kdy se účastníci snaží o co nejpreciznější zajetí drezurní úlohy, kterou pro účely ZZVJ schválila ČJF. 
                       Poslední čtvrtou částí je parkur, kde nerozhoduje rychlost, ale korektní najíždění překážek a cválání na správnou nohu.
