--- a/2024.html
+++ b/2024.html
@@ -61,6 +61,20 @@
                 </div>
                 </article>
 
+                 <article class="section_year__article article_news">
+                <h4 class="article_news__heading">Podzimní hobby parkury 21.9.2024 v Sobotce</h4>
+                  <p class="article_news__text">V sobotu 21.9. jsme opět zavítali do naší oblíbené Sobotky - tentokrát 6 koní a 6 jezdkyň. 
+                    </p>
+                  <p class="article_news__text">V parkuru 50/60 cm se představila Anetka s Lordem a Johanka s Rockym. Oba poníci svoje jezdkyně potěšili a Johanka s Rockym si dojeli pro druhé místo. 
+                      Se závodním prostředím se seznámil Dambar pod vedením Tinky a i on si hned odvezl mašličku. Poslední z naší stáje v parkuru startoval Soran se Šarlotkou. 
+                Následující parkur 60/70cm si všichni tito koně se svými jezdkyněmi zopakovali. Rocky s Johankou šli čistě, Dambar a Tinka čistě a i s další mašlí, 
+                      Soran se Šarlotkou a Lord s Anetkou bezchybný průběh neměli. A dále v tomto parkuru startovaly Kristýna s Greenhornem a Majda se Sauvageonne. 
+                      Tyto dvě dvojice si pak start zopakovaly v soutěži 70/80 cm a Mada  a Sáva získaly třetí místo a Kristýna s Greenem dokonce druhé!
+</p>
+                  <p class="article_news__text">Pochvalně se o výkonech holek vyjadřovala trenérka Martina, ale i holky samy na sobě cítí teď na podzim velké zlepšení. 
+                      S takovým pocitem všichni snadno přežijeme zimu a budeme se těšit na jaro. :-) </p>
+                   
+
         <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Zkoušky základního výcviku jezdce v Sobotce 1.9.2024</h4>
                   <p class="article_news__text">Po několika letech se několik členek naší stáje opět objevilo na soupise účastníků ZZVJ /zkoušky základního výcviku jezdce/. 
