--- a/kone.html
+++ b/kone.html
@@ -82,7 +82,7 @@
                     </div>
 
                     <figure class="img_kone__wrapper">
-                        <img alt="Fotografie bílo-hnědé, flekaté kobylky Karoli" src="./imgs/Karola_2_S.jpg "
+                        <img alt="Fotografie bílo-hnědé, flekaté kobylky Karoly" src="./imgs/Karola_2_S.jpg "
                             onclick="this.classList.toggle('workingImage'); openImg();" />
                     </figure>
                 </div>
@@ -100,7 +100,7 @@
                     </div>
 
                     <figure class="img_kone__wrapper">
-                        <img alt="Fotografie hnědáka ztaženého z dotihů, má tmavou hřívu a lisinku na čele"
+                        <img alt="Fotografie hnědáka staženého z dostihů, má tmavou hřívu a lysinku na čele"
                             src="./imgs/Saul_2_S.jpg" onclick="this.classList.toggle('workingImage'); openImg();" />
                     </figure>
                 </div>
@@ -143,7 +143,7 @@
                     <div class="card_top">
                         <p class="card_top__jmeno">Greenhorn</p>
                         <p class="card_top__datum card_top_text"><span class="card_top_text--bold">Datum
-                                narození:</span> 11.3.2012</p>
+                                narození:</span> 28.4.2018</p>
                         <p class="card_top__plemeno card_top_text"><span class="card_top_text--bold">Plemeno:</span>
                             Anglický plnokrevník</p>
                         <p class="card_top__otec card_top_text"><span class="card_top_text--bold">Otec:</span> Ruler Of
