--- a/2024.html
+++ b/2024.html
@@ -63,7 +63,7 @@
 
                  <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Memoriál Václava Boháče 44.ročník, 28.9.2024 - oficiální závody, stáj Václav Kolín</h4>
-                  <p class="article_news__text">Ve svíteční sobotu 28.9.2024 vyrazila Tina s Devronem na oficiální závody do Kolína. 
+                  <p class="article_news__text">Ve sváteční sobotu 28.9.2024 vyrazila Tina s Devronem na oficiální závody do Kolína. 
                     </p>
                   <p class="article_news__text">Na tomto závodišti jsme byli poprvé a udělalo na nás moc dobrý dojem. Tina a Devron startovali na úrovni Z - 100cm a ZL - 110cm. 
                       V úrovni Z jistě vyhráli - a to byla pro naši stáj vážně velká radost. V ZM skončili po jedné chybě na posledním skoku v poli poražených. I přes to to byl opravdu podařený den.
