--- a/2024.html
+++ b/2024.html
@@ -80,7 +80,7 @@
                       Se závodním prostředím se seznámil Dambar pod vedením Tinky a i on si hned odvezl mašličku. Poslední z naší stáje v parkuru startoval Soran se Šarlotkou. 
                 Následující parkur 60/70cm si všichni tito koně se svými jezdkyněmi zopakovali. Rocky s Johankou šli čistě, Dambar a Tinka čistě a i s další mašlí, 
                       Soran se Šarlotkou a Lord s Anetkou bezchybný průběh neměli. A dále v tomto parkuru startovaly Kristýna s Greenhornem a Majda se Sauvageonne. 
-                      Tyto dvě dvojice si pak start zopakovaly v soutěži 70/80 cm a Mada  a Sáva získaly třetí místo a Kristýna s Greenem dokonce druhé!
+                      Tyto dvě dvojice si pak start zopakovaly v soutěži 70/80 cm a Majda  a Sáva získaly třetí místo a Kristýna s Greenem dokonce druhé!
 </p>
                   <p class="article_news__text">Pochvalně se o výkonech holek vyjadřovala trenérka Martina, ale i holky samy na sobě cítí teď na podzim velké zlepšení. 
                       S takovým pocitem všichni snadno přežijeme zimu a budeme se těšit na jaro. :-) </p>
