--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <p class="section__text section__text--border">Dětský den. Na jaře se nám akce povedla, tak ji opakujeme i na podzim. </p>
                 <figure class="section__img img_wrapper">
                     <img class="img_wrapper__item" src="./akce_foto/Image.jpeg"
-                        alt="plakat na akci detsky den">
+                        alt="IMG_20241007_141850.jpg">
                 </figure>
             </section>
             <section class="section main__section">
