--- a/2024.html
+++ b/2024.html
@@ -49,7 +49,7 @@
 
                  <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Dětský den - rozloučení s létem - sobota 5.10.2024</h4>
-                  <p class="article_news__text">Těšíme se na vás.</p>
+                  <p class="article_news__text">V sovotu 5.10.2024 proběhl další Dětský den. I přes chladnější počasí si to děti opět užily.</p>
                   
             <div class="img_container article_news__imgs">
                  <figure class="img_container__part">
