--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
              <section class="section main__section">
                 <h3 class="section__heading section__heading_main section__heading--absolute">Akce pro veřejnost</h3>
-                <p class="section__text section__text--border">Dětský den. Na jaře se nám akce povedla, tak ji opakujeme i na podzim. </p>
+                <p class="section__text section__text--border">V sobotu 19.10.2024 pořádáme druhý ročník naší Hubertovy jízdy. </p>
                 <figure class="section__img img_wrapper">
                     <img class="img_wrapper__item" src="./akce_foto/Image.jpeg"
                         alt="IMG_20241007_141850.jpg">
