--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <h3 class="section__heading section__heading_main section__heading--absolute">Akce pro veřejnost</h3>
                 <p class="section__text section__text--border">V sobotu 19.10.2024 pořádáme druhý ročník naší Hubertovy jízdy. </p>
                 <figure class="section__img img_wrapper">
-                    <img class="img_wrapper__item" src="./imgs/Image.jpeg"
+                    <img class="img_wrapper__item" src="./akce_foto/Image.jpeg"
                         alt="hubert2024.jpg">
                 </figure>
             </section>
