--- a/index.html
+++ b/index.html
@@ -55,10 +55,13 @@
              <section class="section main__section">
                 <h3 class="section__heading section__heading_main section__heading--absolute">Akce pro veřejnost</h3>
                 <p class="section__text section__text--border">V sobotu 19.10.2024 pořádáme druhý ročník naší Hubertovy jízdy. </p>
-                <figure class="section__img img_wrapper">
-                    <img class="img_wrapper__item" src="./akce_foto/hubert2024.jpg"
-                        alt="hubert2024">
-                </figure>
+                 
+                 <div class="img_container article_news__imgs">
+                 <figure class="img_container__part">
+                                <img src="./imgs/hubert2024.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
             </section>
             <section class="section main__section">
                 <h3 class="section__heading section__heading_main section__heading--absolute">Poloha</h3>
