--- a/2024.html
+++ b/2024.html
@@ -66,7 +66,7 @@
                   <p class="article_news__text">Ve sváteční sobotu 28.9.2024 vyrazila Tina s Devronem na oficiální závody do Kolína. 
                     </p>
                   <p class="article_news__text">Na tomto závodišti jsme byli poprvé a udělalo na nás moc dobrý dojem. Tina a Devron startovali na úrovni Z - 100cm a ZL - 110cm. 
-                      V úrovni Z jistě vyhráli - a to byla pro naši stáj vážně velká radost. V ZM skončili po jedné chybě na posledním skoku v poli poražených. I přes to to byl opravdu podařený den.
+                      V úrovni Z jistě vyhráli - a to byla pro naši stáj vážně velká radost. V ZL skončili po jedné chybě na posledním skoku v poli poražených. I přes to to byl opravdu podařený den.
                 </p>
                         
                       <div class="img_container article_news__imgs">
