--- a/index.html
+++ b/index.html
@@ -54,14 +54,10 @@
 
              <section class="section main__section">
                 <h3 class="section__heading section__heading_main section__heading--absolute">Akce pro veřejnost</h3>
-                <p class="section__text section__text--border">V sobotu 19.10.2024 pořádáme druhý ročník naší Hubertovy jízdy. </p>
+                <p class="section__text section__text--border">Letos už žádné akce pro veřejnost nepořádáme. V příštím roce se můžete těšit na jarní Dětský den, letní příměstské tábory a na podzimní Hubertovu jízdu.  
+                    Pro více informací sledujte náš web a Instagram.</p>
                  
-                 <div class="img_container article_news__imgs">
-                 <figure class="img_container__part">
-                                <img src="./imgs/hubert2024.jpg"
-                                    alt=""
-                                    onclick="this.classList.toggle('workingImage'); openImg();">
-                            </figure>
+              
             </section>
             <section class="section main__section">
                 <h3 class="section__heading section__heading_main section__heading--absolute">Poloha</h3>
