--- a/2024.html
+++ b/2024.html
@@ -50,8 +50,8 @@
                  <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Hubertova jízda - sobota 19.10.2024</h4>
                   <p class="article_news__text">Druhého ročníku naší Hubertovy jízdy se zúčastnilo 10 jezdců. 
-                      Vyrazili jsme na vyjížďku po přilehlých loukách a lesích a skočili jsme si pár terénních skoků. Potom jsme společně snědli výborný guláš od pana Čižíka. Přálo nám počasí a těšíme se na další rok.
-
+                      Vyrazili jsme na vyjížďku po přilehlých loukách a lesích a skočili jsme si pár terénních skoků. Potom jsme společně snědli výborný guláš od pana Čižíka. Přálo nám počasí a těšíme se na další rok.</p>           
+</p>
                        <div class="img_container article_news__imgs">
                  <figure class="img_container__part">
                                 <img src="./imgs/hubert241.jpg"
