--- a/2024.html
+++ b/2024.html
@@ -49,8 +49,8 @@
 
                  <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Hubertova jízda v maskách - neděle 20.10.2024</h4>
-                  <p class="article_news__text">Druhého ročníku naší Hubertovy jízdy se zúčastnilo 10 jezdců. 
-                      Vyrazili jsme na vyjížďku po přilehlých loukách a lesích a skočili jsme si pár terénních skoků. Potom jsme společně snědli výborný guláš od pana Čižíka. Přálo nám počasí a těšíme se na další rok.</p>
+                  <p class="article_news__text">Pro členky probíhala v neděli další Hubertka - tentokrát v maskách. V sedle nás vyrazilo deset - připojil se i Rambík s malým Honzíkem - Batmanem. 
+                      Masky byly povedené a vyhráli to tentokrát úplně všichni. </p>
 
                  <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Hubertova jízda - sobota 19.10.2024</h4>
