--- a/2024.html
+++ b/2024.html
@@ -185,6 +185,12 @@
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
+                           
+                              <figure class="img_container__part">
+                                <img src="./imgs/hubert2412.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
                
                 </div>
                 </article>
