--- a/index.html
+++ b/index.html
@@ -56,12 +56,15 @@
                 <h3 class="section__heading section__heading_main section__heading--absolute">Akce pro veřejnost</h3>
                 <p class="section__text section__text--border">Letos už žádné akce pro veřejnost nepořádáme. V příštím roce se můžete těšit na jarní Dětský den, letní příměstské tábory a na podzimní Hubertovu jízdu.  
                     Pro více informací sledujte náš web a Instagram.</p>
+
+                 <p class="section__text section__text--border">Zahrádkáři mají možnost odběru koňského hnoje zdarma. Hnůj je smíchaný se slámou. Ke kontejneru je snadné dojet autem. Bližší informace na tel.č. 739 550 505</p>
                  
               
             </section>
             <section class="section main__section">
                 <h3 class="section__heading section__heading_main section__heading--absolute">Poloha</h3>
-                <p class="section__text section__text--border">Naše stáj se nachází jen sedm minut od centra Liberce, v ulici Pod Strání 131 Stráž nad Nisou, na okraji průmyslové zóny Sever a nedaleko obchodního centra Globus. Stáj je dostupná i MHD (autobusová linka č. 14, č. 27, č. 600 zastávka Globus nebo Obchodní).</p>
+                <p class="section__text section__text--border">Naše stáj se nachází jen sedm minut od centra Liberce, v ulici Pod Strání 131 Stráž nad Nisou, na okraji průmyslové zóny Sever a nedaleko obchodního centra 
+                    Globus. Stáj je dostupná i MHD (autobusová linka č. 14, č. 27, č. 600 zastávka Globus nebo Obchodní).</p>
                 <div class="section__map">
                     <iframe style="border:none" src="https://frame.mapy.cz/s/jocomucora" frameborder="0"></iframe>  
                 </div>
