--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                 <p class="section__text section__text--border">Letos už žádné akce pro veřejnost nepořádáme. V příštím roce se můžete těšit na jarní Dětský den, letní příměstské tábory a na podzimní Hubertovu jízdu.  
                     Pro více informací sledujte náš web a Instagram.</p>
 
-                 <p class="section__text section__text--border">Zahrádkáři mají možnost odběru koňského hnoje zdarma. Hnůj je smíchaný se slámou. Ke kontejneru je snadné dojet autem. Bližší informace na tel.č. 739 550 505</p>
+                 <p class="section__text section__text--border">Zahrádkáři mají možnost odběru koňského hnoje zdarma. Hnůj je smíchaný se slámou. Ke kontejneru je snadné dojet autem.  
+                     Bližší informace na tel.č. 739 550 505</p>
                  
               
             </section>
