--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                 <h3 class="section__heading section__heading_main section__heading--absolute">Akce pro veřejnost</h3>
                 <p class="section__text section__text--border">Letos už žádné akce pro veřejnost nepořádáme. V příštím roce se můžete těšit na jarní Dětský den, letní příměstské tábory a na podzimní Hubertovu jízdu.  
                     Pro více informací sledujte náš web a Instagram.
-                    Zahrádkáři mají možnost odběru koňského hnoje zdarma. Hnůj je smíchaný se slámou. Ke kontejneru je snadné dojet autem.  
-                     Bližší informace na tel.č. 739 550 505
-                
+                     </p>
+                      <p class="section__text section__text--border">Zahrádkáři mají možnost odběru koňského hnoje zdarma. Hnůj je smíchaný se slámou. Ke kontejneru je snadné dojet autem.  
+                     Bližší informace na tel.č. 739 550 505    
                 </p>
 
                
