--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     Pro více informací sledujte náš web a Instagram.
                      </p>
                       <p class="section__text section__text--border">Zahrádkáři mají možnost odběru koňského hnoje zdarma. Hnůj je smíchaný se slámou. Ke kontejneru je snadné dojet autem.  
-                     Bližší informace na tel.č. 739 550 505    
+                     Bližší informace na tel.č. 739 550 505.    
                 </p>
 
                
