--- a/kone.html
+++ b/kone.html
@@ -23,7 +23,7 @@
             <div class="nav__bar">
 
                 <a class="button_hamburger" href="javascript:void(0);" onclick="myFunction()"></a>
-            </div>
+            </div> 
             <menu id="myLinks" class="menu hidden">
                 <li class="menu__item"><a class="button menu__button" href="index.html#uvod">Úvod</a></li>
                 <li class="menu__item"><a class="button menu__button" href="sluzby.html#sluzby">Služby</a></li>
@@ -415,6 +415,24 @@
                     <figure class="img_kone__wrapper">
                         <img alt="Fotografie grošáka Dambara, má světlejší nohy a tmavší hřívu"
                             src="./akce_foto/IMG_20240618_143754.jpg" onclick="this.classList.toggle('workingImage'); openImg();" />
+                    </figure>
+                </div>
+                 
+                 <div class="section_cards__card card">
+                    <div class="card_top">
+                        <p class="card_top__jmeno">Isabella</p>
+                        <p class="card_top__datum card_top_text"><span class="card_top_text--bold">Datum
+                                narození:</span> 28.2.2012</p>
+                        <p class="card_top__plemeno card_top_text"><span class="card_top_text--bold">Plemeno:</span>
+                            Hafling</p>
+                        <p class="card_top__otec card_top_text"><span class="card_top_text--bold">Otec:</span>
+                            Nass</p>
+                        <p class="card_top__matka card_top_text"><span class="card_top_text--bold">Matka:</span>
+                            Tara</p>
+                    </div>
+                    <figure class="img_kone__wrapper">
+                        <img alt="Fotografie žluté klisny haflinga na pastvě"
+                            src="./imgs/isabella.jpg" onclick="this.classList.toggle('workingImage'); openImg();" />
                     </figure>
                 </div>
             </div>
