--- a/kone.html
+++ b/kone.html
@@ -434,6 +434,24 @@
                         <img alt="Fotografie žluté klisny haflinga na pastvě"
                             src="./imgs/isabella.jpg" onclick="this.classList.toggle('workingImage'); openImg();" />
                     </figure>
+                
+                 </div>
+                 <div class="section_cards__card card">
+                    <div class="card_top">
+                        <p class="card_top__jmeno">Sweetee Art</p>
+                        <p class="card_top__datum card_top_text"><span class="card_top_text--bold">Datum
+                                narození:</span> 7.6.2023</p>
+                        <p class="card_top__plemeno card_top_text"><span class="card_top_text--bold">Plemeno:</span>
+                            Velšský pony</p>
+                        <p class="card_top__otec card_top_text"><span class="card_top_text--bold">Otec:</span>
+                            TOPAS 1</p>
+                        <p class="card_top__matka card_top_text"><span class="card_top_text--bold">Matka:</span>
+                            Gipsy</p>
+                    </div>
+                    <figure class="img_kone__wrapper">
+                        <img alt="Fotografie grošáka Dambara, má světlejší nohy a tmavší hřívu"
+                            src="./imgs/felix.jpg" onclick="this.classList.toggle('workingImage'); openImg();" />
+                    </figure>
                 </div>
             </div>
 
