--- a/kone.html
+++ b/kone.html
@@ -444,12 +444,12 @@
                         <p class="card_top__plemeno card_top_text"><span class="card_top_text--bold">Plemeno:</span>
                             Velšský pony</p>
                         <p class="card_top__otec card_top_text"><span class="card_top_text--bold">Otec:</span>
-                            TOPAS 1</p>
+                            JHS Mike White Art</p>
                         <p class="card_top__matka card_top_text"><span class="card_top_text--bold">Matka:</span>
-                            Gipsy</p>
+                            Tošika</p>
                     </div>
                     <figure class="img_kone__wrapper">
-                        <img alt="Fotografie grošáka Dambara, má světlejší nohy a tmavší hřívu"
+                        <img alt="Fotografie tmavého hnědáka hříběte bez ohlávky"
                             src="./imgs/felix.jpg" onclick="this.classList.toggle('workingImage'); openImg();" />
                     </figure>
                 </div>
