--- a/kone.html
+++ b/kone.html
@@ -254,7 +254,7 @@
                             Cerlinka</p>
                     </div>
                     <figure class="img_kone__wrapper">
-                        <img alt="Fotografie malého poníka, je zbarven do černa a má hnědou hřívuje, slepí na jedno oko"
+                        <img alt="Fotografie malého poníka, je zbarven do černa a má hnědou hřívuje, slepý na jedno oko"
                             src="./imgs/Robin_S.jpg" onclick="this.classList.toggle('workingImage'); openImg();" />
                     </figure>
                 </div>
@@ -291,7 +291,7 @@
                             Montilla</p>
                     </div>
                     <figure class="img_kone__wrapper">
-                        <img alt="Fotografie hnědáka Montyho, má tmavou hřívu a Lisinku na čele"
+                        <img alt="Fotografie hnědáka Montyho, má tmavou hřívu a Lysinku na čele"
                             src="./imgs/Monty_S.jpg" onclick="this.classList.toggle('workingImage'); openImg();" />
                     </figure>
                 </div>
@@ -379,7 +379,7 @@
                     </div>
 
                     <figure class="img_kone__wrapper img_kone__wrapper--vyska">
-                        <img alt="Fotografie valacha Nera. je tmavě hnědý, takovou barvu má i jeho hříva. Na čele má malou lisinku"
+                        <img alt="Fotografie valacha Nera. je tmavě hnědý, takovou barvu má i jeho hříva. Na čele má malou lysinku"
                             src="./imgs/Nero_S.jpg" onclick="this.classList.toggle('workingImage'); openImg();" />
                     </figure>
                 </div>
@@ -449,7 +449,7 @@
                             Tošika</p>
                     </div>
                     <figure class="img_kone__wrapper">
-                        <img alt="Fotografie tmavého hnědáka hříběte bez ohlávky"
+                        <img alt="Fotografie hříběte tmavého hnědáka na pastvě s nepadnoucí ohlávkou"
                             src="./imgs/felix.jpg" onclick="this.classList.toggle('workingImage'); openImg();" />
                     </figure>
                 </div>
