--- a/2024.html
+++ b/2024.html
@@ -47,6 +47,19 @@
             <section class="section_year">
                 <h3 class="section_year__heading">2024</h3>
 
+                  <article class="section_year__article article_news">
+                <h4 class="article_news__heading">Besídka JS Vydlákov</h4>
+                  <p class="article_news__text">V sobotu 14.12.2024 chystáme besídku pro přátele JS Vydlákov. </p>
+
+                      <div class="img_container article_news__imgs">
+                 <figure class="img_container__part">
+                                <img src="./imgs/maskarni1.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                          </div>
+                </article>
+
                  <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Hubertova jízda v maskách - neděle 20.10.2024</h4>
                   <p class="article_news__text">Pro členky probíhala v neděli další Hubertka - tentokrát v maskách. V sedle nás vyrazilo deset - připojil se i Rambík s malým Honzíkem - Batmanem. 
