--- a/2024.html
+++ b/2024.html
@@ -53,7 +53,7 @@
 
                       <div class="img_container article_news__imgs">
                  <figure class="img_container__part">
-                                <img src="./imgs/maskarni1.jpg"
+                                <img src="./imgs/besidka2024.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
