--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
                       <p class="section__text section__text--border">Zahrádkáři mají možnost odběru koňského hnoje zdarma. Hnůj je smíchaný se slámou. Ke kontejneru je snadné dojet autem.  
                      Bližší informace na tel.č. 739 550 505.    
                 </p>
+                   <p class="section__text section__text--border">Všem lidem a koním přejeme příjemné prožití vánočních svátků a do nového roku 2025 hodně zdraví a štěstí.
+                     </p>
 
                
               
