--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
                      Bližší informace na tel.č. 739 550 505.    
                 </p>
                    <p class="section__text section__text--border">Všem lidem a koním přejeme příjemné prožití vánočních svátků a do nového roku 2025 hodně zdraví a štěstí.
+                           <div class="img_container article_news__imgs">
+                 <figure class="img_container__part">
+                                <img src="./imgs/vanoce2024.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
                      </p>
 
                
