--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                       <p class="section__text section__text--border">Zahrádkáři mají možnost odběru koňského hnoje zdarma. Hnůj je smíchaný se slámou. Ke kontejneru je snadné dojet autem.  
                      Bližší informace na tel.č. 739 550 505.    
                 </p>
-                   <p class="section__text section__text--border">Všem lidem a koním přejeme příjemné prožití vánočních svátků a do nového roku 2025 hodně zdraví a štěstí. JS Vydlákov
+                   <p class="section__text section__text--border">Všem lidem a koním přejeme příjemné prožití vánočních svátků a do nového roku 2025 hodně zdraví a štěstí. JS Vydlákov</p>
                          
                       <div class="img_container article_news__imgs">
                  <figure class="img_container__part">
