--- a/akce.html
+++ b/akce.html
@@ -19,7 +19,7 @@
 
 <body>
 
-        <header class="header header--letak">
+        <header class="header header--akce">
             <nav class="header__nav nav">
                 <div class="nav__bar">
     
