--- a/tabor.html
+++ b/tabor.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <header class="header header--letak">
+    <header class="header header--tabor">
         <nav class="header__nav nav">
             <div class="nav__bar">
 
