--- a/akce.html
+++ b/akce.html
@@ -45,6 +45,9 @@
         <h2 class="main__heading main_akce__heading ">Akce</h2>
          
         <div class="select_year">
+             <div class="year_box">
+                <a href="2025.html#2025" class="year_box__text">2024</a>
+             </div>
             <div class="year_box">
                 <a href="2024.html#2024" class="year_box__text">2024</a>
              </div>
