--- a/2025.html
+++ b/2025.html
@@ -48,12 +48,62 @@
                 <h3 class="section_year__heading">2025</h3>
 
                 <article class="section_year__article article_news">
-                <h4 class="article_news__heading">Besídka JS Vydlákov</h4>
-                  <p class="article_news__text">V sobotu 14.12.2024 chystáme besídku pro přátele JS Vydlákov. </p>
+                <h4 class="article_news__heading">Skok do nového roku 2025</h4>
+                  <p class="article_news__text">I letos se nám povedla tato oblíbená novoroční akce. Přejeme všem lidem a koním hodně zdraví a štěstí v novém roce 2025. </p>
 
                       <div class="img_container article_news__imgs">
                  <figure class="img_container__part">
-                                <img src="./imgs/besidka2024.jpg"
+                                <img src="./imgs/skok20251.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                           <figure class="img_container__part">
+                                <img src="./imgs/skok20252.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                           <figure class="img_container__part">
+                                <img src="./imgs/skok20253.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                           <figure class="img_container__part">
+                                <img src="./imgs/skok20254.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                           <figure class="img_container__part">
+                                <img src="./imgs/skok20255.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                           <figure class="img_container__part">
+                                <img src="./imgs/skok20256.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                           <figure class="img_container__part">
+                                <img src="./imgs/skok20257.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                           <figure class="img_container__part">
+                                <img src="./imgs/skok20258.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                           <figure class="img_container__part">
+                                <img src="./imgs/skok20259.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                           <figure class="img_container__part">
+                                <img src="./imgs/skok202510.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                           <figure class="img_container__part">
+                                <img src="./imgs/skok202511.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
