--- a/cenik.html
+++ b/cenik.html
@@ -65,10 +65,10 @@
 
             <div class="prize_item">
                 <h3 class="prize_item__heading">PERMANENTKA</h3>
-                <p class="prize_item__text">Nabízíme permanentku na 10 lekcí</p>
+                <p class="prize_item__text">Nabízíme permanentku na 10 lekcí (zahrnuje vyjížďky i tréninky)</p>
 
                 <div class="table prize_item__table">
-                    <div class="table__item">Zahrnuje tréninky i vyjížďky</div>
+                    <div class="table__item">permanentka</div>
                     <div class="table__item table__item--right">4 000,-</div>
                 </div>
             </div>
