--- a/cenik.html
+++ b/cenik.html
@@ -56,7 +56,7 @@
                         <div class="table__item">Trénink na jízdárně</div>
                         <div class="table__item table__item--right">500,- /45 min</div>
 
-                        <div class="table__item">Vyjížďka do přírody s doprovodem</div>
+                        <div class="table__item">Vyjížďka do přírody s doprovodem, max. váha jezdce 80kg</div>
                         <div class="table__item table__item--right">800,- /45 min</div>
                     
                 </div>
