--- a/tabor.html
+++ b/tabor.html
@@ -28,7 +28,7 @@
                 <li class="menu__item"><a class="button menu__button" href="sluzby.html#sluzby">Služby</a></li>
                 <li class="menu__item"><a class="button menu__button" href="akce.html#akce">Akce</a></li>
                 <li class="menu__item"><a class="button menu__button" href="kone.html#kone">Koně</a></li>
-                <li class="menu__item"><a class="button menu__button" href="kontakt.html#recenze">Recenze</a></li>
+                <li class="menu__item"><a class="button menu__button" href="recenze.html#recenze">Recenze</a></li>
                 <li class="menu__item"><a class="button menu__button" href="tabor.html#tabor">Příměstský tábor</a></li>
                 <li class="menu__item"><a class="button menu__button" href="cenik.html#cenik">Ceník</a></li>
                 <li class="menu__item"><a class="button menu__button" href="kontakt.html#kontakt">Kontakt</a></li>
